Fix: Unset height and min-height to allow vertical overflow of table when printing

--- a/packages/core/app/styles/navi-core/visualizations/table.less
+++ b/packages/core/app/styles/navi-core/visualizations/table.less
@@ -21,6 +21,10 @@
   overflow-y: auto;
   overflow-x: hidden;
 
+  &--print {
+    height: unset;
+  }
+
   &__info-header {
     .display-flex;
     flex: 0 1 auto;
